@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.4
 
 	- Documentation updates (STR #2560, STR #2563)
+	- ippReadIO() could read past the end of a buffer (STR
+	  #2561)
 	- The scheduler would crash on shutdown if it was unable
 	  to create a Kerberos context.
 	- Multiple AuthTypes in cupsd.conf did not work (STR
